--- a/antora/components/refguide/modules/applib-classes/pages/utility.adoc
+++ b/antora/components/refguide/modules/applib-classes/pages/utility.adoc
@@ -6,8 +6,8 @@
 The `org.apache.causeway.applib.util` package has a number of simple utility classes designed to simplify the coding of some common tasks.
 
 * xref:applib:index/util/Enums.adoc[Enums]
+* xref:applib:index/util/Equality.adoc[]
 * xref:applib:index/util/ObjectContracts.adoc[ObjectContracts]
-* xref:applib:index/util/JaxbUtil.adoc[JaxbUtil]
 * xref:applib:index/util/Reasons.adoc[Reasons]
 * xref:applib:index/util/ReasonBuffer.adoc[ReasonBuffer]
 * xref:applib:index/util/ReasonBuffer2.adoc[ReasonBuffer2]
