--- a/core/adoc/modules/_overview/pages/about.adoc
+++ b/core/adoc/modules/_overview/pages/about.adoc
@@ -762,246 +762,7 @@ Artifact: demo-domain
 Type: jar
 Directory: /examples/demo/domain
 ----
-|.Components
-****
-demoapp.dom.AppConfiguration +
-demoapp.dom._infra.resources.AsciiDocConverterService +
-demoapp.dom._infra.resources.AsciiDocReaderService +
-demoapp.dom._infra.resources.AsciiDocValueSemanticsWithPreprocessing +
-demoapp.dom._infra.resources.MarkdownReaderService +
-demoapp.dom._infra.resources.MarkupReaderService +
-demoapp.dom._infra.resources.MarkupVariableResolverService +
-demoapp.dom._infra.resources.ResourceReaderService +
-demoapp.dom._infra.samples.EnumSamples +
-demoapp.dom._infra.samples.NameSamples +
-demoapp.dom._infra.samples.asciidoc.CausewayAsciiDocSamples +
-demoapp.dom._infra.samples.markdown.CausewayMarkdownSamples +
-demoapp.dom._infra.urlencoding.UrlEncodingServiceNaiveInMemory +
-demoapp.dom.domain._changes.EntityChangesSubscriberToCaptureChangesInMemory +
-demoapp.dom.domain._commands.ExposePersistedCommands$TableColumnOrderDefault +
-demoapp.dom.domain._interactions.ExecutionListenerToCaptureInteractionsInMemory +
-demoapp.dom.domain.actions.Action.commandPublishing.ActionCommandPublishingSeeding +
-demoapp.dom.domain.actions.Action.commandPublishing.jdo.ActionCommandPublishingJdoEntities +
-demoapp.dom.domain.actions.Action.commandPublishing.jpa.ActionCommandPublishingJpaEntities +
-demoapp.dom.domain.actions.Action.domainEvent.subscribers.ActionDomainEventControlService +
-demoapp.dom.domain.actions.Action.executionPublishing.ActionExecutionPublishingSeeding +
-demoapp.dom.domain.actions.Action.executionPublishing.jdo.ActionExecutionPublishingJdoEntities +
-demoapp.dom.domain.actions.Action.executionPublishing.jpa.ActionExecutionPublishingJpaEntities +
-demoapp.dom.domain.collections.Collection.domainEvent.subscribers.CollectionDomainEventControlService +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.disabled.DomainObjectEntityChangePublishingDisabledSeeding +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.disabled.jdo.DomainObjectEntityChangePublishingDisabledJdoEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.disabled.jpa.DomainObjectEntityChangePublishingDisabledJpaEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.enabled.DomainObjectEntityChangePublishingEnabledSeeding +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.enabled.jdo.DomainObjectEntityChangePublishingEnabledJdoEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.annotated.enabled.jpa.DomainObjectEntityChangePublishingEnabledJpaEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnot.enabled.DomainObjectEntityChangePublishingEnabledMetaAnnotatedSeeding +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnot.enabled.jdo.DomainObjectEntityChangePublishingEnabledMetaAnnotatedJdoEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnot.enabled.jpa.DomainObjectEntityChangePublishingEnabledMetaAnnotatedJpaEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnotOverridden.enabled.DomainObjectEntityChangePublishingEnabledMetaAnnotOverriddenSeeding +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnotOverridden.enabled.jdo.DomainObjectEntityChangePublishingEnabledMetaAnnotOverriddenJdoEntities +
-demoapp.dom.domain.objects.DomainObject.entityChangePublishing.metaAnnotOverridden.enabled.jpa.DomainObjectEntityChangePublishingEnabledMetaAnnotOverriddenJpaEntities +
-demoapp.dom.domain.objects.DomainObject.nature.viewmodels.jaxbrefentity.JaxbRefSeeding +
-demoapp.dom.domain.objects.DomainObject.nature.viewmodels.jaxbrefentity.jdo.JaxbRefJdoEntities +
-demoapp.dom.domain.objects.DomainObject.nature.viewmodels.jaxbrefentity.jpa.JaxbRefJpaEntities +
-demoapp.dom.domain.objects.other.embedded.jdo.ComplexNumberJdoValueSemantics +
-demoapp.dom.domain.objects.other.embedded.jdo.NumberConstantJdoRepository +
-demoapp.dom.domain.objects.other.embedded.jpa.ComplexNumberJpaValueSemantics +
-demoapp.dom.domain.objects.other.embedded.jpa.NumberConstantJpaRepository +
-demoapp.dom.domain.objects.other.embedded.persistence.NumberConstantSeeding +
-demoapp.dom.domain.objects.other.embedded.samples.ComplexNumberSamples +
-demoapp.dom.domain.properties.Property.commandPublishing.PropertyCommandPublishingSeeding +
-demoapp.dom.domain.properties.Property.commandPublishing.jdo.PropertyCommandPublishingJdoEntities +
-demoapp.dom.domain.properties.Property.commandPublishing.jpa.PropertyCommandPublishingJpaEntities +
-demoapp.dom.domain.properties.Property.domainEvent.subscribers.PropertyDomainEventControlService +
-demoapp.dom.domain.properties.Property.executionPublishing.PropertyExecutionPublishingSeeding +
-demoapp.dom.domain.properties.Property.executionPublishing.jdo.PropertyExecutionPublishingJdoEntities +
-demoapp.dom.domain.properties.Property.executionPublishing.jpa.PropertyExecutionPublishingJpaEntities +
-demoapp.dom.domain.properties.Property.projecting.jdo.PropertyProjectingChildJdoEntities +
-demoapp.dom.domain.properties.Property.projecting.jpa.PropertyProjectingChildJpaEntities +
-demoapp.dom.domain.properties.Property.projecting.persistence.PropertyProjectingChildSeeding +
-demoapp.dom.domain.properties.PropertyLayout.navigable.FileTreeNodeService +
-demoapp.dom.domain.properties.PropertyLayout.repainting.PdfJsViewerAdvisorFallback +
-demoapp.dom.featured.customui.geocoding.GeoapifyClient +
-demoapp.dom.services.core.errorreportingservice.ErrorReportingServiceDemoImplementation +
-demoapp.dom.services.core.eventbusservice.EventLogEntryJdoRepository +
-demoapp.dom.services.core.eventbusservice.EventLogEntryJpaRepository +
-demoapp.dom.services.core.eventbusservice.EventSubscriberDemoImplementation +
-demoapp.dom.services.core.wrapperFactory.WrapperFactorySeeding +
-demoapp.dom.services.core.wrapperFactory.jdo.WrapperFactoryJdoEntities +
-demoapp.dom.services.core.wrapperFactory.jpa.WrapperFactoryJpaEntities +
-demoapp.dom.services.extensions.secman.apptenancy.ApplicationTenancyEvaluatorForDemo +
-demoapp.dom.services.extensions.secman.apptenancy.jdo.TenantedJdoEntities +
-demoapp.dom.services.extensions.secman.apptenancy.jpa.TenantedJpaEntities +
-demoapp.dom.services.extensions.secman.apptenancy.persistence.TenantedSeeding +
-demoapp.dom.services.extensions.secman.appuser.seed.AppUserSeeding +
-demoapp.dom.types.causeway.blobs.jdo.CausewayBlobJdoEntities +
-demoapp.dom.types.causeway.blobs.jpa.CausewayBlobJpaEntities +
-demoapp.dom.types.causeway.blobs.persistence.CausewayBlobSeeding +
-demoapp.dom.types.causeway.blobs.samples.CausewayBlobsSamples +
-demoapp.dom.types.causeway.clobs.jdo.CausewayClobJdoEntities +
-demoapp.dom.types.causeway.clobs.jpa.CausewayClobJpaEntities +
-demoapp.dom.types.causeway.clobs.persistence.CausewayClobSeeding +
-demoapp.dom.types.causeway.clobs.samples.CausewayClobsSamples +
-demoapp.dom.types.causeway.localresourcepaths.jdo.CausewayLocalResourcePathJdoEntities +
-demoapp.dom.types.causeway.localresourcepaths.jpa.CausewayLocalResourcePathJpaEntities +
-demoapp.dom.types.causeway.localresourcepaths.persistence.CausewayLocalResourcePathSeeding +
-demoapp.dom.types.causeway.localresourcepaths.samples.CausewayLocalResourcePathsSamples +
-demoapp.dom.types.causeway.markups.jdo.CausewayMarkupJdoEntities +
-demoapp.dom.types.causeway.markups.jpa.CausewayMarkupJpaEntities +
-demoapp.dom.types.causeway.markups.persistence.CausewayMarkupSeeding +
-demoapp.dom.types.causeway.markups.samples.CausewayMarkupSamples +
-demoapp.dom.types.causeway.passwords.jdo.CausewayPasswordJdoEntities +
-demoapp.dom.types.causeway.passwords.jpa.CausewayPasswordJpaEntities +
-demoapp.dom.types.causeway.passwords.persistence.CausewayPasswordSeeding +
-demoapp.dom.types.causeway.passwords.samples.CausewayPasswordsSamples +
-demoapp.dom.types.causewayext.cal.jdo.CausewayCalendarEventEntities +
-demoapp.dom.types.causewayext.cal.jpa.CausewayCalendarEventEntities +
-demoapp.dom.types.causewayext.cal.persistence.CausewayCalendarEventSeeding +
-demoapp.dom.types.causewayext.cal.samples.CausewayCalendarEventSamples +
-demoapp.dom.types.causewayval.asciidocs.jdo.CausewayAsciiDocJdoEntities +
-demoapp.dom.types.causewayval.asciidocs.jpa.CausewayAsciiDocJpaEntities +
-demoapp.dom.types.causewayval.asciidocs.persistence.CausewayAsciiDocSeeding +
-demoapp.dom.types.causewayval.markdowns.jdo.CausewayMarkdownJdoEntities +
-demoapp.dom.types.causewayval.markdowns.jpa.CausewayMarkdownJpaEntities +
-demoapp.dom.types.causewayval.markdowns.persistence.CausewayMarkdownSeeding +
-demoapp.dom.types.causewayval.vegas.jdo.CausewayVegaJdoEntities +
-demoapp.dom.types.causewayval.vegas.jpa.CausewayVegaJpaEntities +
-demoapp.dom.types.causewayval.vegas.persistence.CausewayVegaSeeding +
-demoapp.dom.types.causewayval.vegas.samples.CausewayVegaSamples +
-demoapp.dom.types.javaawt.images.jdo.JavaAwtBufferedImageJdoEntities +
-demoapp.dom.types.javaawt.images.jpa.JavaAwtBufferedImageJpaEntities +
-demoapp.dom.types.javaawt.images.persistence.JavaAwtBufferedImageSeeding +
-demoapp.dom.types.javaawt.images.samples.JavaAwtBufferedImageService +
-demoapp.dom.types.javaawt.images.samples.JavaAwtBufferedImagesSamples +
-demoapp.dom.types.javalang.booleans.jdo.WrapperBooleanJdoEntities +
-demoapp.dom.types.javalang.booleans.jpa.WrapperBooleanJpaEntities +
-demoapp.dom.types.javalang.booleans.persistence.WrapperBooleanSeeding +
-demoapp.dom.types.javalang.booleans.samples.WrapperBooleanSamples +
-demoapp.dom.types.javalang.bytes.jdo.WrapperByteJdoEntities +
-demoapp.dom.types.javalang.bytes.jpa.WrapperByteJpaEntities +
-demoapp.dom.types.javalang.bytes.persistence.WrapperByteSeeding +
-demoapp.dom.types.javalang.bytes.samples.WrapperByteSamples +
-demoapp.dom.types.javalang.characters.jdo.WrapperCharacterJdoEntities +
-demoapp.dom.types.javalang.characters.jpa.WrapperCharacterJpaEntities +
-demoapp.dom.types.javalang.characters.persistence.WrapperCharacterSeeding +
-demoapp.dom.types.javalang.characters.samples.WrapperCharacterSamples +
-demoapp.dom.types.javalang.doubles.jdo.WrapperDoubleJdoEntities +
-demoapp.dom.types.javalang.doubles.jpa.WrapperDoubleJpaEntities +
-demoapp.dom.types.javalang.doubles.persistence.WrapperDoubleSeeding +
-demoapp.dom.types.javalang.doubles.samples.WrapperDoubleSamples +
-demoapp.dom.types.javalang.enums.jdo.JavaLangEnumJdoEntities +
-demoapp.dom.types.javalang.enums.jpa.JavaLangEnumJpaEntities +
-demoapp.dom.types.javalang.enums.persistence.JavaLangEnumSeeding +
-demoapp.dom.types.javalang.floats.jdo.WrapperFloatJdoEntities +
-demoapp.dom.types.javalang.floats.jpa.WrapperFloatJpaEntities +
-demoapp.dom.types.javalang.floats.persistence.WrapperFloatSeeding +
-demoapp.dom.types.javalang.floats.samples.WrapperFloatSamples +
-demoapp.dom.types.javalang.integers.jdo.WrapperIntegerJdoEntities +
-demoapp.dom.types.javalang.integers.jpa.WrapperIntegerJpaEntities +
-demoapp.dom.types.javalang.integers.persistence.WrapperIntegerSeeding +
-demoapp.dom.types.javalang.integers.samples.WrapperIntegerSamples +
-demoapp.dom.types.javalang.longs.jdo.WrapperLongJdoEntities +
-demoapp.dom.types.javalang.longs.jpa.WrapperLongJpaEntities +
-demoapp.dom.types.javalang.longs.persistence.WrapperLongSeeding +
-demoapp.dom.types.javalang.longs.samples.WrapperLongSamples +
-demoapp.dom.types.javalang.shorts.jdo.WrapperShortJdoEntities +
-demoapp.dom.types.javalang.shorts.jpa.WrapperShortJpaEntities +
-demoapp.dom.types.javalang.shorts.persistence.WrapperShortSeeding +
-demoapp.dom.types.javalang.shorts.samples.WrapperShortSamples +
-demoapp.dom.types.javalang.strings.jdo.JavaLangStringJdoEntities +
-demoapp.dom.types.javalang.strings.jpa.JavaLangStringJpaEntities +
-demoapp.dom.types.javalang.strings.persistence.JavaLangStringSeeding +
-demoapp.dom.types.javamath.bigdecimals.jdo.JavaMathBigDecimalJdoEntities +
-demoapp.dom.types.javamath.bigdecimals.jpa.JavaMathBigDecimalJpaEntities +
-demoapp.dom.types.javamath.bigdecimals.persistence.JavaMathBigDecimalSeeding +
-demoapp.dom.types.javamath.bigdecimals.samples.JavaMathBigDecimalSamples +
-demoapp.dom.types.javamath.bigintegers.jdo.JavaMathBigIntegerJdoEntities +
-demoapp.dom.types.javamath.bigintegers.jpa.JavaMathBigIntegerJpaEntities +
-demoapp.dom.types.javamath.bigintegers.persistence.JavaMathBigIntegerSeeding +
-demoapp.dom.types.javamath.bigintegers.samples.JavaMathBigIntegerSamples +
-demoapp.dom.types.javanet.urls.jdo.JavaNetUrlJdoEntities +
-demoapp.dom.types.javanet.urls.jpa.JavaNetUrlJpaEntities +
-demoapp.dom.types.javanet.urls.persistence.JavaNetUrlSeeding +
-demoapp.dom.types.javanet.urls.samples.JavaNetUrlSamples +
-demoapp.dom.types.javasql.javasqldate.jdo.JavaSqlDateJdoEntities +
-demoapp.dom.types.javasql.javasqldate.jpa.JavaSqlDateJpaEntities +
-demoapp.dom.types.javasql.javasqldate.persistence.JavaSqlDateSeeding +
-demoapp.dom.types.javasql.javasqldate.samples.JavaSqlDateSamples +
-demoapp.dom.types.javasql.javasqltimestamp.jdo.JavaSqlTimestampJdoEntities +
-demoapp.dom.types.javasql.javasqltimestamp.jpa.JavaSqlTimestampJpaEntities +
-demoapp.dom.types.javasql.javasqltimestamp.persistence.JavaSqlTimestampSeeding +
-demoapp.dom.types.javasql.javasqltimestamp.samples.JavaSqlTimestampSamples +
-demoapp.dom.types.javatime.javatimelocaldate.jdo.JavaTimeLocalDateJdoEntities +
-demoapp.dom.types.javatime.javatimelocaldate.jpa.JavaTimeLocalDateJpaEntities +
-demoapp.dom.types.javatime.javatimelocaldate.persistence.JavaTimeLocalDateSeeding +
-demoapp.dom.types.javatime.javatimelocaldate.samples.JavaTimeLocalDateSamples +
-demoapp.dom.types.javatime.javatimelocaldatetime.jdo.JavaTimeLocalDateTimeJdoEntities +
-demoapp.dom.types.javatime.javatimelocaldatetime.jpa.JavaTimeLocalDateTimeJpaEntities +
-demoapp.dom.types.javatime.javatimelocaldatetime.persistence.JavaTimeLocalDateTimeSeeding +
-demoapp.dom.types.javatime.javatimelocaldatetime.samples.JavaTimeLocalDateTimeSamples +
-demoapp.dom.types.javatime.javatimelocaltime.jdo.JavaTimeLocalTimeJdoEntities +
-demoapp.dom.types.javatime.javatimelocaltime.jpa.JavaTimeLocalTimeJpaEntities +
-demoapp.dom.types.javatime.javatimelocaltime.persistence.JavaTimeLocalTimeSeeding +
-demoapp.dom.types.javatime.javatimelocaltime.samples.JavaTimeLocalTimeSamples +
-demoapp.dom.types.javatime.javatimeoffsetdatetime.jdo.JavaTimeOffsetDateTimeJdoEntities +
-demoapp.dom.types.javatime.javatimeoffsetdatetime.jpa.JavaTimeOffsetDateTimeJpaEntities +
-demoapp.dom.types.javatime.javatimeoffsetdatetime.persistence.JavaTimeOffsetDateTimeSeeding +
-demoapp.dom.types.javatime.javatimeoffsetdatetime.samples.JavaTimeOffsetDateTimeSamples +
-demoapp.dom.types.javatime.javatimeoffsettime.jdo.JavaTimeOffsetTimeJdoEntities +
-demoapp.dom.types.javatime.javatimeoffsettime.jpa.JavaTimeOffsetTimeJpaEntities +
-demoapp.dom.types.javatime.javatimeoffsettime.persistence.JavaTimeOffsetTimeSeeding +
-demoapp.dom.types.javatime.javatimeoffsettime.samples.JavaTimeOffsetTimeSamples +
-demoapp.dom.types.javatime.javatimezoneddatetime.jdo.JavaTimeZonedDateTimeJdoEntities +
-demoapp.dom.types.javatime.javatimezoneddatetime.jpa.JavaTimeZonedDateTimeJpaEntities +
-demoapp.dom.types.javatime.javatimezoneddatetime.persistence.JavaTimeZonedDateTimeSeeding +
-demoapp.dom.types.javatime.javatimezoneddatetime.samples.JavaTimeZonedDateTimeSamples +
-demoapp.dom.types.javautil.javautildate.jdo.JavaUtilDateJdoEntities +
-demoapp.dom.types.javautil.javautildate.jpa.JavaUtilDateJpaEntities +
-demoapp.dom.types.javautil.javautildate.persistence.JavaUtilDateSeeding +
-demoapp.dom.types.javautil.javautildate.samples.JavaUtilDateSamples +
-demoapp.dom.types.javautil.uuids.jdo.JavaUtilUuidJdoEntities +
-demoapp.dom.types.javautil.uuids.jpa.JavaUtilUuidJpaEntities +
-demoapp.dom.types.javautil.uuids.persistence.JavaUtilUuidSeeding +
-demoapp.dom.types.javautil.uuids.samples.JavaUtilUuidSamples +
-demoapp.dom.types.jodatime.jodadatetime.jdo.JodaDateTimeJdoEntities +
-demoapp.dom.types.jodatime.jodadatetime.persistence.JodaDateTimeJdoSeeding +
-demoapp.dom.types.jodatime.jodadatetime.samples.JodaDateTimeSamples +
-demoapp.dom.types.jodatime.jodalocaldate.jdo.JodaLocalDateJdoEntities +
-demoapp.dom.types.jodatime.jodalocaldate.persistence.JodaLocalDateJdoSeeding +
-demoapp.dom.types.jodatime.jodalocaldate.samples.JodaLocalDateSamples +
-demoapp.dom.types.jodatime.jodalocaldatetime.jdo.JodaLocalDateTimeJdoEntities +
-demoapp.dom.types.jodatime.jodalocaldatetime.persistence.JodaLocalDateTimeSeeding +
-demoapp.dom.types.jodatime.jodalocaldatetime.samples.JodaLocalDateTimeSamples +
-demoapp.dom.types.jodatime.jodalocaltime.jdo.JodaLocalTimeJdoEntities +
-demoapp.dom.types.jodatime.jodalocaltime.persistence.JodaLocalTimeSeeding +
-demoapp.dom.types.jodatime.jodalocaltime.samples.JodaLocalTimeSamples +
-demoapp.dom.types.primitive.booleans.jdo.PrimitiveBooleanJdoEntities +
-demoapp.dom.types.primitive.booleans.jpa.PrimitiveBooleanJpaEntities +
-demoapp.dom.types.primitive.booleans.persistence.PrimitiveBooleanSeeding +
-demoapp.dom.types.primitive.bytes.jdo.PrimitiveByteJdoEntities +
-demoapp.dom.types.primitive.bytes.jpa.PrimitiveByteJpaEntities +
-demoapp.dom.types.primitive.bytes.persistence.PrimitiveByteSeeding +
-demoapp.dom.types.primitive.chars.jdo.PrimitiveCharJdoEntities +
-demoapp.dom.types.primitive.chars.jpa.PrimitiveCharJpaEntities +
-demoapp.dom.types.primitive.chars.persistence.PrimitiveCharSeeding +
-demoapp.dom.types.primitive.doubles.jdo.PrimitiveDoubleJdoEntities +
-demoapp.dom.types.primitive.doubles.jpa.PrimitiveDoubleJpaEntities +
-demoapp.dom.types.primitive.doubles.persistence.PrimitiveDoubleSeeding +
-demoapp.dom.types.primitive.floats.jdo.PrimitiveFloatJdoEntities +
-demoapp.dom.types.primitive.floats.jpa.PrimitiveFloatJpaEntities +
-demoapp.dom.types.primitive.floats.persistence.PrimitiveFloatSeeding +
-demoapp.dom.types.primitive.ints.jdo.PrimitiveIntJdoEntities +
-demoapp.dom.types.primitive.ints.jpa.PrimitiveIntJpaEntities +
-demoapp.dom.types.primitive.ints.persistence.PrimitiveIntSeeding +
-demoapp.dom.types.primitive.longs.jdo.PrimitiveLongJdoEntities +
-demoapp.dom.types.primitive.longs.jpa.PrimitiveLongJpaEntities +
-demoapp.dom.types.primitive.longs.persistence.PrimitiveLongSeeding +
-demoapp.dom.types.primitive.shorts.jdo.PrimitiveShortJdoEntities +
-demoapp.dom.types.primitive.shorts.jpa.PrimitiveShortJpaEntities +
-demoapp.dom.types.primitive.shorts.persistence.PrimitiveShortSeeding +
-****
-
-.Dependencies
+|.Dependencies
 ****
 com.h2database:h2:jar:<managed> +
 org.apache.causeway.extensions:causeway-extensions-audittrail-persistence-jdo:jar:<managed> +
@@ -7503,12 +7264,6 @@ Directory: /incubator/extensions/core/commandreplay/primary
 ----
 |A module for obtaining commands from a primary
 
-.Components
-****
-o.a.i.extensions.commandreplay.primary.config.PrimaryConfig +
-o.a.i.extensions.commandreplay.primary.spiimpl.CaptureResultOfCommand +
-****
-
 .Dependencies
 ****
 org.apache.causeway.core:causeway-core-config:jar:<managed> +
@@ -7533,16 +7288,6 @@ Directory: /incubator/extensions/core/commandreplay/secondary
 ----
 |A module providing a Quartz Job to run on a secondary system,
 for obtaining commands from a primary and saving them so that they are replayed.
-
-.Components
-****
-o.a.i.extensions.commandreplay.secondary.analyser.CommandReplayAnalyserException +
-o.a.i.extensions.commandreplay.secondary.analyser.CommandReplayAnalyserResult +
-o.a.i.extensions.commandreplay.secondary.analysis.CommandReplayAnalysisService +
-o.a.i.extensions.commandreplay.secondary.config.SecondaryConfig +
-o.a.i.extensions.commandreplay.secondary.fetch.CommandFetcher +
-o.a.i.extensions.commandreplay.secondary.job.ReplicateAndReplayJob +
-****
 
 .Dependencies
 ****
