--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/redirectPolicy/ActionLayoutRedirectPolicyVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/redirectPolicy/ActionLayoutRedirectPolicyVm-description.adoc
@@ -1,8 +1,20 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `redirectPolicy` attribute ...
+If an action returns its target, then the `redirectPolicy` attribute determines 
+whether to update the page or instead to redirect (forcing a re-rendering of a new page).
 
-WARNING: TODO[CAUSEWAY-3310]
-If the action returns its target, then determines whether to update the page or instead to redirect (forcing a re-rendering of a new page).
 Not re-rendering can provide a smoother UI experience.
-Supported by the Wicket viewer.
+
+[WARNING]
+==== 
+This feature is currently *not* supported by the _Wicket Viewer_ https://issues.apache.org/jira/browse/CAUSEWAY-1659
+
+(Perhaps a feasible showcase could be to render a local time property, then demonstrate that its UI would not update after action invocation.) 
+====
+
+[source,java,indent=0]
+----
+include::ActionLayoutRedirectPolicyVm.java[tags=act]
+----
+
+<.> this action returns its target, and so setting `ONLY_IF_DIFFERS` instructs the _viewer_ to not re-render the current page
