--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/ActionLayout.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/ActionLayout.adoc
@@ -10,7 +10,8 @@ Layout hints for actions.
 ----
 @interface ActionLayout {
   String associateWith() default "";     // <.>
-  BookmarkPolicy bookmarking() default BookmarkPolicy.NOT_SPECIFIED;     // <.>
+  @Deprecated(forRemoval = true, since = "2.0.0-RC1")
+BookmarkPolicy bookmarking() default BookmarkPolicy.NOT_SPECIFIED;     // <.>
   String cssClass() default "";     // <.>
   String cssClassFa() default "";     // <.>
   CssClassFaPosition cssClassFaPosition() default CssClassFaPosition.LEFT;     // <.>
@@ -35,7 +36,12 @@ Associates this action with a property or collection, specifying its id.
 <.> xref:#bookmarking[bookmarking]
 +
 --
-Whether (and how) this action's result can be bookmarked in the UI, overriding any _DomainObjectLayout#bookmarking()_ on the return type if present.
+[WARNING]
+====
+[red]#_deprecated:_#
+
+Conflicting semantics with _DomainObjectLayout#bookmarking()_ , that is, if present on this action's return type, hence deprecated for removal.
+====
 --
 <.> xref:#cssClass[cssClass]
 +
@@ -121,7 +127,12 @@ Note that it is also possible to associate an action with a collection using _Ac
 [#bookmarking]
 === bookmarking
 
-Whether (and how) this action's result can be bookmarked in the UI, overriding any _DomainObjectLayout#bookmarking()_ on the return type if present.
+[WARNING]
+====
+[red]#_deprecated:_#
+
+Conflicting semantics with _DomainObjectLayout#bookmarking()_ , that is, if present on this action's return type, hence deprecated for removal.
+====
 
 [#cssClass]
 === cssClass
