--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -569,7 +569,7 @@ git pull --ff-only
 
 git checkout -b $CAUSEWAYBRANCH-jpa
 
-mvn versions:update-parent -DparentVersion=$CAUSEWAYREL # <.>
+mvn versions:update-parent -DparentVersion=$CAUSEWAYREL -Dskip.nightly # <.>
 mvn versions:set -DnewVersion=$CAUSEWAYREL
 
 git add .
@@ -606,7 +606,7 @@ git pull --ff-only
 
 git checkout -b $CAUSEWAYBRANCH-jdo
 
-mvn versions:update-parent -DparentVersion=$CAUSEWAYREL
+mvn versions:update-parent -DparentVersion=$CAUSEWAYREL -Dskip.nightly
 mvn versions:set -DnewVersion=$CAUSEWAYREL
 
 git add .
@@ -662,7 +662,7 @@ git pull --ff-only
 
 git checkout -b $CAUSEWAYBRANCH-jpa
 
-mvn versions:update-parent -DparentVersion=$CAUSEWAYREL  # <.>
+mvn versions:update-parent -DparentVersion=$CAUSEWAYREL -Dskip.nightly  # <.>
 mvn versions:set -DnewVersion=$CAUSEWAYREL
 
 git add .
@@ -699,7 +699,7 @@ git pull --ff-only
 
 git checkout -b $CAUSEWAYBRANCH-jdo
 
-mvn versions:update-parent -DparentVersion=$CAUSEWAYREL
+mvn versions:update-parent -DparentVersion=$CAUSEWAYREL -Dskip.nightly
 mvn versions:set -DnewVersion=$CAUSEWAYREL
 
 git add .
