CAUSEWAY-3380: update mignotes

--- a/antora/components/refguide-index/modules/applib/pages/index/id/LogicalType.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/id/LogicalType.adoc
@@ -107,7 +107,7 @@ Canonical name of the corresponding class.
 
 Returns the logical-type-name (unique amongst non-abstract classes), as per the _LogicalTypeFacet_ .
 
-This will typically be the value of the _DomainObject#logicalTypeName()_ annotation attribute. If none has been specified then will default to the fully qualified class name (with _ClassSubstitutorRegistry class name substituted_ if necessary to allow for runtime bytecode enhancement.
+This will typically be the value of the _Named#value()_ annotation attribute. If none has been specified then will default to the fully qualified class name (with _ClassSubstitutorRegistry class name substituted_ if necessary to allow for runtime bytecode enhancement.
 
 The _ObjectSpecification_ can be retrieved using _SpecificationLoader#specForLogicalTypeName(String)_ } passing the logical-type-name as argument.
 
