updates links to nightly etc

--- a/antora/components/comguide/modules/ROOT/nav.adoc
+++ b/antora/components/comguide/modules/ROOT/nav.adoc
@@ -8,6 +8,7 @@
 * Nightly
 ** xref:nightly-builds.adoc[Nightly Builds]
 ** xref:nightly-deploys.adoc[Nightly Deploys]
+** xref:weekly-builds.adoc[Weekly Builds]
 * Release
 ** xref:cutting-a-release.adoc[Cutting a Release]
 ** xref:verifying-releases.adoc[Verifying Releases]
