--- a/antora/components/docs/modules/ROOT/pages/landing-page/releases.adoc
+++ b/antora/components/docs/modules/ROOT/pages/landing-page/releases.adoc
@@ -22,23 +22,16 @@ If your app inherits from the xref:docs:parent-pom:about.adoc[Parent POM], then 
 <.> update as required.
 
 
-== Nightly Builds
-
-If you like to live on the bleeding edge, there are also nightly builds of the framework.
-
-* link:https://github.com/apache/causeway[Packages] (ASF hosted)
-+
-Requires github credentials to download packages
-
-* link:https://github.com/apache-causeway-committers/causeway-nightly[Packages] (not ASF hosted)
-+
-Packages can be downloaded without authentication.
-
-* link:https://apache-causeway-committers.github.io/causeway-nightly[Website preview] (not ASF hosted)
-
-Although these are maintained and used by the framework's committers, do be aware that *these are _not_ official ASF releases*; they are provided as a convenience only.
 
 == Building from Source
 
-If you want though you can also xref:docs:ROOT:downloads/how-to.adoc[download] the source code and build it directly.
+You can also xref:docs:ROOT:downloads/how-to.adoc[download] the source code and build it directly.
+
+
+
+== Interim Builds
+
+If you want to track the latest developments, there are also xref:comguide:ROOT:nightly-builds.adoc[nightly builds] and xref:comguide:ROOT:weekly-builds.adoc[weekly builds].
+
+Although these are maintained by the framework’s committers, do be aware that *these are not official ASF releases*.
 
