--- a/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
+++ b/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
@@ -12,6 +12,12 @@
 ** Automated Analysis
 *** link:https://sonarcloud.io/dashboard?id=apache_causeway[SonarCloud.io]
 
+** Interim Builds
+
+*** xref:comguide:ROOT:nightly-builds.adoc[]
+*** xref:comguide:ROOT:weekly-builds.adoc[]
+*** link:https://apache-causeway-committers.github.io/causeway-nightly[Website Preview]
+
 
 ** Development
 
