--- a/antora/components/comguide/modules/ROOT/pages/starter-apps.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/starter-apps.adoc
@@ -8,24 +8,24 @@
 
 When making updates for simpleapp, use the following process:
 
-=== If the change applies to released (M5):
+=== If the change applies to the currently released version:
 
-. make change to jdo, then merge down to jdo-SNAPSHOT
-. also merge jdo -> jpa, and fix any persistence differences if nec.
+. make change to jpa, then merge down to jpa-SNAPSHOT
+. also merge jpa -> jdo, and fix any persistence differences if nec.
 . then merge jpa -> jpa-SNAPSHOT
-. finally, merge jdo-SNAPSHOT -> jpa-SNAPSHOT (should be a no-op)
+. finally, merge jpa-SNAPSHOT -> jdo-SNAPSHOT (should be a no-op)
 
 Doing it this way makes it easy to keep the branches in sync.
 
-=== If the change applies to snapshot (M6), then its similar but shorter:
+=== If the change applies to the current snapshot, then simply:
 
-. make change to jdo-SNAPSHOT
-. merge jdo-SNAPSHOT to jpa-SNAPSHOT, and fix any persistence differences
+. make change to jpa-SNAPSHOT
+. merge jpa-SNAPSHOT to jdo-SNAPSHOT, and fix any persistence differences
 
 [NOTE]
 ====
-If you do want to update the antora docs and have them updated on-line, then the procedure is to check out the released branch (M5) and make changes there.
-Then we build and copy over to the apache/causeway-site repo to publish up to causeway.apache.org.
+If you do want to update the antora docs and have them updated on-line, then the procedure is to check out the currently released branch and make changes there.
+Then we build and copy over to the `apache/causeway-site` repo to publish up to https://causeway.apache.org.
 ====
 
 
