--- a/antora/components/docs/modules/ROOT/pages/downloads/how-to.adoc
+++ b/antora/components/docs/modules/ROOT/pages/downloads/how-to.adoc
@@ -26,7 +26,7 @@ If you want to build Apache Causeway from formally released source tarballs, you
 
 
 
-== Verifying Releases
+=== Verifying Releases
 
 It is essential that you verify the integrity of any downloaded files using the PGP or MD5 signatures.
 For more information on signing artifacts and why we do it, check out the http://www.apache.org/dev/release-signing.html[Release Signing FAQ].
@@ -93,4 +93,10 @@ See link:https://gitbox.apache.org/setup/[gitbox setup] for more details on how 
 The http://projects.apache.org/doap.html[description of a project] RDF file for Apache Causeway can be downloaded link:https://causeway.apache.org/doap_causeway.rdf[here].
 
 
+
+== Interim Builds
+
+If you want to track the latest developments, there are also xref:comguide:ROOT:nightly-builds.adoc[nightly builds] and xref:comguide:ROOT:weekly-builds.adoc[weekly builds].
+
+Although these are maintained by the framework’s committers, do be aware that *these are not official ASF releases*.
 
